--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Geraldine Pang</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hello, I'm Geraldine Pang.</h1>
-				<p>I'm a Data Analyst from Singapore. <br> <a href="/about">Read more about me here.</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:geraldinepyh@gmail.com">email</a></li>
-        		<li><a href="https://github.com/gerpang">github.com/gerpang</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Geraldine Pang
+---
+<div class="blurb">
+	<h1>Hello, I'm Geraldine Pang.</h1>
+		<p>I'm a Data Analyst from Singapore. <br> <a href="/about">Read more about me here.</a></p>
+</div><!-- /.blurb -->
