--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan's Blog
+title: About Geraldine
 ---
 	<h1>{{ page.title }}</h1>
   <img src="https://avatars1.githubusercontent.com/u/40481576?s=460&u=f09b541baead7f74bfea5ff6ecd47ce2171f82e4&v=4" alt="That's me." style="width:200px;height:200px;"/>
