--- a/cv/index.html
+++ b/cv/index.html
@@ -1,13 +1,12 @@
 ---
 layout: default
-title: cv
+title: cv (work in progress)
 ---
 
 <h1>{{ page.title }}</h1>
-It says cv but this is still a work in progress. Pardon me. 
-<br><br>
-Programming Skills: Python, R, SQL, PHP, VBA. 
-Some things I've worked on:<br>
+<br>
+Programming Skills: Python, R, SQL, PHP, VBA. <br>
+Some things I've worked on: <br>
 <li>Prediction of dangerous driving trips using vehicle telematics <i>(Log Regression, Naïve Bayes, KNN, Random Forest, Light GBM, NN)</i></li>
 <li>Binary Classification of airline customer reviews into Useful/Not Useful <i>(Logistic Regression, Max Entropy, Naïve Bayes)</i> and extraction of suggestions using Topic Modelling <i>(gensim LDA, LDA Mallet, pyLDAvis)</i></li>
 <li>Entity extraction <i>(Spacy)</i>, Sentiment analysis and recommendation engine based on food reviews in a graph database <i>(Neo4j, SPARQL, Jaccard similarity)</i></li>
