--- a/cv/index.html
+++ b/cv/index.html
@@ -1,17 +1,55 @@
 ---
 layout: default
-title: cv (work in progress)
+title: cv
 ---
 
 <h1>{{ page.title }}</h1>
 <br>
-Programming Skills: Python, R, SQL, PHP, VBA. <br>
-Some things I've worked on: <br>
-<li>Prediction of dangerous driving trips using vehicle telematics <i>(Log Regression, Naïve Bayes, KNN, Random Forest, Light GBM, NN)</i></li>
-<li>Binary Classification of airline customer reviews into Useful/Not Useful <i>(Logistic Regression, Max Entropy, Naïve Bayes)</i> and extraction of suggestions using Topic Modelling <i>(gensim LDA, LDA Mallet, pyLDAvis)</i></li>
-<li>Entity extraction <i>(Spacy)</i>, Sentiment analysis and recommendation engine based on food reviews in a graph database <i>(Neo4j, SPARQL, Jaccard similarity)</i></li>
+Programming Skills: Python, R, Alteryx, Tableau, SQL, PHP, VBA, Microsoft Office
+<br>
+<h2>Python Projects</h2> <br>
+<li>Prediction of dangerous driving trips using vehicle telematics <i>(Log
+        Regression, Naïve Bayes, KNN, Random Forest, Light GBM, NN)</i></li>
+<li>Binary Classification of airline customer reviews into Useful/Not Useful
+    <i>(Logistic Regression, Max Entropy, Naïve Bayes)</i> and extraction of
+    suggestions using Topic Modelling <i>(gensim LDA, LDA Mallet, pyLDAvis)</i>
+</li>
+<li>Entity extraction <i>(Spacy)</i>, Sentiment analysis and recommendation
+    engine based on food reviews in a graph database <i>(Neo4j, SPARQL, Jaccard
+        similarity)</i></li>
 <li>RWE platform backend pipeline <i>(Luigi widgets)</i></li>
-<li>Timesheet application for real-time data collection, dashboard and report generation using VBA</li>
-<li>Python library for programmatically generating LaTeX reports <i>(Pandas, pylatex)</i></li>
-<li>Other visualizations/dashboards <i>(plotly/Dash, R Shiny, PHP-based interface to run SQL queries)</i></li>
+<li>Timesheet application for real-time data collection, dashboard and report
+    generation using VBA</li>
+<li>Python library for programmatically generating LaTeX reports <i>(Pandas,
+        pylatex)</i></li>
+<li>Other visualizations/dashboards <i>(plotly/Dash, R Shiny, PHP-based
+        interface to run SQL queries)</i></li>
+<br>
+<h2>VBA Projects</h2> <br>
+<i>VBA is useful in the healthcare context where Cybersecurity is a major
+    concern. <br>While it is not easy to implement Python-based solutions, all
+    staff have Excel. This makes automation accessible even with 'technical
+    limitations'.</i>
+<li>Timesheet Application - weekly entry of man hours clocked by >60 employees
+    is compiled and pumped into a Tableau Dashboard for biweekly updates to
+    Management and quarterly cost recovery</li>
+<li>Automated report generation on Excel</li>
+<li>Semi-automated compilation of messy, unstructured data from various sources
+</li>
 <br><br>
+<h2>Professional Roles</h2>
+<li>Executive, Data Analytics, Group Internal Audit, MOH Holdings</li>
+<li>Intern, Data Science, Holmusk (Biotechnology start up focused on Mental
+    Health and Real World Evidence data)</li>
+<li>Management Intern, Operations (Medicine), Tan Tock Seng Hospital</li>
+<li>Research Intern, Resilieo Laboratory, NTU (Research on Stress and
+    Resilience)</li>
+<li>Research Attachment Student, Chronobiology and Sleep Laboratory, Duke-NUS
+    (Research on Sleep and Circadian Rhythms)</li>
+<br><br>
+<h2>Education</h2>
+<li>Master of IT in Business (Analytics) - Singapore Management University (SMU)
+</li>
+<li>Bachelor of Science (Hons) in Biological Sciences - Nanyang Technological
+    University (NTU)</li>
+<li>Autumn semester exchange - Uppsala University (Uppsala, Sweden)</li>
