--- a/cv/index.html
+++ b/cv/index.html
@@ -8,28 +8,32 @@ title: cv
 Programming Skills: Python, R, Alteryx, Tableau, SQL, PHP, VBA, Microsoft Office
 <br>
 <h2>Python Projects</h2> <br>
-<li>Prediction of dangerous driving trips using vehicle telematics <i>(Log
-        Regression, Naïve Bayes, KNN, Random Forest, Light GBM, NN)</i></li>
-<li>Binary Classification of airline customer reviews into Useful/Not Useful
-    <i>(Logistic Regression, Max Entropy, Naïve Bayes)</i> and extraction of
-    suggestions using Topic Modelling <i>(gensim LDA, LDA Mallet, pyLDAvis)</i>
+<li><b>Knowledge Graphs: </b>
+    Devised a Neo4j graph database using data scraped from a local food reviews
+    website to perform entity recognition and sentiment analysis for
+    recommending food and restaurants</li>
+<li><b>Applied Machine Learning Project: </b>
+    Pre-processed and analyzed dataset of vehicle telematics (e.g.
+    accelerometer), to build models predicting if a driving trip was “dangerous”
+    based on a set of engineered features
 </li>
-<li>Entity extraction <i>(Spacy)</i>, Sentiment analysis and recommendation
-    engine based on food reviews in a graph database <i>(Neo4j, SPARQL, Jaccard
-        similarity)</i></li>
-<li>RWE platform backend pipeline <i>(Luigi widgets)</i></li>
-<li>Timesheet application for real-time data collection, dashboard and report
-    generation using VBA</li>
+<li><b>Text Analytics Project: </b>
+    Developed a classification model using Python to predict the usefulness of
+    free-text suggestions from online surveys, and implemented topic modelling
+    methods to identify areas of concern raised by customers
+</li>
+<li>Real World Evidence platform backend pipeline <i>(Luigi widgets)</i></li>
 <li>Python library for programmatically generating LaTeX reports <i>(Pandas,
         pylatex)</i></li>
-<li>Other visualizations/dashboards <i>(plotly/Dash, R Shiny, PHP-based
-        interface to run SQL queries)</i></li>
+<li>Plotly/Dash visualisation for interactively querying patient profile of
+    'similar' patients (based on diagnostic data)</li>
+
 <br>
-<h2>VBA Projects</h2> <br>
+<h2>VBA Projects</h2>
 <i>VBA is useful in the healthcare context where Cybersecurity is a major
     concern. <br>While it is not easy to implement Python-based solutions, all
     staff have Excel. This makes automation accessible even with 'technical
-    limitations'.</i>
+    limitations'.</i><br>
 <li>Timesheet Application - weekly entry of man hours clocked by >60 employees
     is compiled and pumped into a Tableau Dashboard for biweekly updates to
     Management and quarterly cost recovery</li>
@@ -37,6 +41,11 @@ Programming Skills: Python, R, Alteryx, Tableau, SQL, PHP, VBA, Microsoft Office
 <li>Semi-automated compilation of messy, unstructured data from various sources
 </li>
 <br><br>
+<h2>Other Projects</h2>
+<i>Just for fun</i><br>
+<li>Telegram chatbots for event management, reminders</li>
+<li>PHP-based interface to run SQL queries</i></li>
+<br>
 <h2>Professional Roles</h2>
 <li>Executive, Data Analytics, Group Internal Audit, MOH Holdings</li>
 <li>Intern, Data Science, Holmusk (Biotechnology start up focused on Mental
@@ -53,3 +62,4 @@ Programming Skills: Python, R, Alteryx, Tableau, SQL, PHP, VBA, Microsoft Office
 <li>Bachelor of Science (Hons) in Biological Sciences - Nanyang Technological
     University (NTU)</li>
 <li>Autumn semester exchange - Uppsala University (Uppsala, Sweden)</li>
+<br>
